# veradminpropfirm

./: .env.example  .gitignore  .gitignore.example  27-command-center-screen-spec.md  FixStep6Imports.ps1  PopulateStep6Stubs.ps1  README.md  README_STEP11_ARTIFACTS.md  RECOMMENDED_REPO_TREE.txt  Step9_Scaffold.ps1  drizzle.config.ts  drizzle.config.ts.example  fix-layout-navlink.ps1  handoff_step4_to_step5.md  handoff_step5_to_step6.md  handoff_step7_to_step8.md  next.config.mjs  next.config.mjs.example  package.json  package.json.example  package.json.hotfix.bak  package.json.step11-json-fixed.bak  pnpm-workspace.yaml  populateStep6Files.ps1  step4_evaluation_pipeline_outputs.md  step4_pipeline_outputs.json  step4_test_scenario_guidance.md  tsconfig.json  tsconfig.tsbuildinfo  veradmin-v2-complete.ps1  verify-step4-final.ps1  vitest.config.ts
audit/: veradmin-step7-audit.json  veradmin-step7-audit.md  veradmin-structure-audit.json  veradmin-structure-audit.txt
db/: README.md  client.ts
desktop-bootstrap/: index.html
docs/: 01-product-doctrine.md  02-mvp-scope.md  03-architecture-decisions.md  04-ux-principles.md  05-rule-engine-spec.md  06-data-model.md  07-account-lifecycle-and-modes.md  08-dashboard-and-navigation-spec.md  09-trade-logging-and-journaling-spec.md  10-payouts-rotations-and-alerts-spec.md  11-settings-backups-and-exports-spec.md  12-testing-and-quality-gates.md  (+88 more)
src-tauri/: Cargo.toml  Cargo.toml.example  tauri.conf.json  tauri.conf.json.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: server-launcher.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/: tauri.conf.json
src-tauri/src/commands/: app_paths.rs
(+275 files in other folders)
