[package]
name = "veradmin-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Veradmin Team"]
description = "Veradmin desktop shell"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
