[package]
name = "veradmin-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Veradmin Team <you@example.com>"]
description = "Veradmin desktop shell"
license = "MIT"

[lib]
name = "veradmin_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "=2.10.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
